# humanise

./: .gitignore  Cargo.toml  README.md
src/: durations.rs  lib.rs
