[package]
name = "humanise"
version = "0.1.1"
license = "MIT"
edition = "2021"
description = "Humanise data"
repository = "https://github.com/tecc/humanise.git"
authors = ["tecc"]
keywords = ["human-readable", "format"]

[dependencies]
chrono = { version = "0.4", optional = true }
time = { version = "0.3", optional = true }

[features]
default = ["durations"]
durations = []
chrono = ["dep:chrono"]
time = ["dep:time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
